correccion de color en los links de las paginas

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -3057,6 +3057,26 @@ body {
     }
 }
 
+#page-mod-page-view .box {
+    a {
+        text-decoration-style: solid;
+        text-decoration-color: $primary;
+        text-decoration-thickness: .10em;
+        text-underline-offset: .15em;
+        color: $primary;
+        font-family: 'Roboto';
+        font-weight: bold;
+        word-wrap: break-word;
+        &:hover {
+            color: $grey3;
+            text-decoration-color: $grey3;
+        }
+        &:focus {
+            box-shadow: none;
+        }
+    }
+}
+
 
 /* OPACITY */
 
