--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -28,3 +28,10 @@
 .cmid-2975449 {
     @include general.bbdd-1col;
 }
+
+
+/* BBDD - LIPROF */
+
+.cmid-2975514 {
+    @include general.bbdd-mochilas-liprof;
+}
