--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -32,6 +32,9 @@
 
 /* BBDD - LIPROF */
 
-.cmid-2975514 {
+.cmid-2975514,
+.cmid-2975515,
+.cmid-2975517,
+.cmid-2975516 {
     @include general.bbdd-mochilas-liprof;
 }
