--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -35,6 +35,10 @@
 .cmid-2975514,
 .cmid-2975515,
 .cmid-2975517,
-.cmid-2975516 {
+.cmid-2975516,
+.cmid-2975520,
+.cmid-2975521,
+.cmid-2975523,
+.cmid-2975522 {
     @include general.bbdd-mochilas-liprof;
 }
