--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -39,10 +39,7 @@
 .cmid-2975520,
 .cmid-2975521,
 .cmid-2975523,
-.cmid-2975522 {
-    @include general.bbdd-mochilas-liprof;
-}
-
+.cmid-2975522,
 .cmid-2975574 {
     @include general.bbdd-mochilas-liprof;
 }
