--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -43,3 +43,9 @@
 .cmid-2975574 {
     @include general.bbdd-mochilas-liprof;
 }
+
+/* BBDD ANOTADORES BATA */
+
+.cmid-2975384 {
+    @include general.bbdd-anotadores-bata;
+}
