--- a/public/campus/posgrados/diplo-nt/22/styles/course.scss
+++ b/public/campus/posgrados/diplo-nt/22/styles/course.scss
@@ -46,6 +46,6 @@
 
 /* BBDD ANOTADORES BATA */
 
-.cmid-2975384 {
+.cmid-2975384, .cmid-2975385, .cmid-2975387, .cmid-2975388 {
     @include general.bbdd-anotadores-bata;
 }
