escondí el boton agregar entrada en bbdd anotadores bata

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -901,6 +901,10 @@ display: none;
 display: none;
 }
 
+&#page-mod-data-view:not(.editing) #sticky-footer .navitem a {
+display: none;
+}
+
 /* .editing #region-main ul.nav.nav-tabs.mb-3, .editing #options {
 display: block;
 } */
