--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -901,6 +901,10 @@ display: none;
 display: none;
 }
 
+.datapreferences.my-5 form .box.py-3.generalbox a {
+color: $secondary;
+}
+
 &#page-mod-data-view:not(.editing) #sticky-footer .navitem a {
 display: none;
 }
