--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -822,7 +822,7 @@ background-color: #F2E5FF;
 
 .pent-usuario img {
     width: 56px;
-    border: 2px solid #262D30;
+    border: 2px solid #1B97D5;
 }
 
 .pent-tipo {
