mesa geco fondo botones de config

--- a/public/campus/posgrados/diplo-eel/4/styles/course.scss
+++ b/public/campus/posgrados/diplo-eel/4/styles/course.scss
@@ -99,4 +99,10 @@
    .drawer-right {
        display: none;
     }
+    .secondary-navigation .navigation {
+       background-color: transparent;
+       .nav-tabs {
+        background-color: transparent;
+        }
+    }
 }
